# pygenstates

./: .gitignore  LICENSE  README.md  eigensolver.py  eigensolver_FEM.py  pyproject.toml
.github/workflows/: publish.yml  testpublish.yml
docs/: .gitignore  api.rst  conf.py  index.rst  installation.rst  usage_notes.rst  worked_examples.rst
examples/: advanced_examples.ipynb  getting_started_examples.ipynb
pygenstates/: __init__.py  eigensolver.py  eigensolver_fd.py  eigensolver_fem.py
pygenstates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pygenstates/__pycache__/: __init__.cpython-313.pyc.2497472275248  __init__.cpython-313.pyc.2817488070224  eigensolver.cpython-313.pyc.1441331717552  eigensolver.cpython-313.pyc.1738205475056  eigensolver.cpython-313.pyc.2027200292272  eigensolver.cpython-313.pyc.2033380664752  eigensolver.cpython-313.pyc.2138493789616  eigensolver.cpython-313.pyc.2276521718160  eigensolver.cpython-313.pyc.2303331987696  eigensolver.cpython-313.pyc.2304989425904  eigensolver.cpython-313.pyc.2497472275888  eigensolver.cpython-313.pyc.2666156425744  eigensolver.cpython-313.pyc.3154330759408  eigensolver_fd.cpython-313.pyc.1855857129104  eigensolver_fd.cpython-313.pyc.1952995388560  eigensolver_fd.cpython-313.pyc.2027200294032  eigensolver_fd.cpython-313.pyc.2137356938384  eigensolver_fd.cpython-313.pyc.2276521719440  eigensolver_fd.cpython-313.pyc.2280607708656  eigensolver_fd.cpython-313.pyc.2304989427184  eigensolver_fd.cpython-313.pyc.2317353594000  eigensolver_fd.cpython-313.pyc.2666156427184  (+9 more)
