[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygenstates"
version = "0.2.0"
description = "A Python solver for time-independent Schrodinger eigenvalue problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-fem",
]

[project.optional-dependencies]
examples = [
    "ipykernel",
    "matplotlib",
    "notebook",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
]

[tool.setuptools.packages.find]
include = ["pygenstates*"]
